--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/styled-components": "^5.1.15",
     "@typescript-eslint/eslint-plugin": "^4.30.0",
     "@typescript-eslint/parser": "^4.30.0",
+    "axios-mock-adapter": "^1.20.0",
     "eslint": "^7.32.0",
     "eslint-plugin-react": "^7.25.1",
     "prettier": "2.4.1"
