--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.0",
     "styled-components": "^5.3.1",
     "svg-loaders-react": "^2.2.1",
     "typescript": "^4.4.2",
@@ -53,12 +53,14 @@
     ]
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^6.3.12",
-    "@storybook/addon-essentials": "^6.3.12",
-    "@storybook/addon-links": "^6.3.12",
-    "@storybook/node-logger": "^6.3.12",
-    "@storybook/preset-create-react-app": "^3.2.0",
-    "@storybook/react": "^6.3.12",
+    "@storybook/addon-actions": "^6.4.9",
+    "@storybook/addon-essentials": "^6.4.9",
+    "@storybook/addon-links": "^6.4.9",
+    "@storybook/builder-webpack5": "^6.4.9",
+    "@storybook/manager-webpack5": "^6.4.9",
+    "@storybook/node-logger": "^6.4.9",
+    "@storybook/preset-create-react-app": "^4.0.0",
+    "@storybook/react": "^6.4.9",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -70,6 +72,8 @@
     "axios-mock-adapter": "^1.20.0",
     "eslint": "^7.32.0",
     "eslint-plugin-react": "^7.25.1",
-    "prettier": "2.4.1"
+    "eslint-plugin-storybook": "^0.5.5",
+    "prettier": "2.4.1",
+    "webpack": "^5.65.0"
   }
 }
