--- a/package.json
+++ b/package.json
@@ -71,9 +71,11 @@
     "@typescript-eslint/parser": "^4.30.0",
     "axios-mock-adapter": "^1.20.0",
     "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.25.1",
     "eslint-plugin-storybook": "^0.5.5",
-    "prettier": "2.4.1",
+    "prettier": "^2.5.1",
     "webpack": "^5.65.0"
   }
 }
