--- a/package.json
+++ b/package.json
@@ -5,22 +5,20 @@
   "dependencies": {
     "axios": "^0.24.0",
     "dayjs": "^1.10.7",
+    "next": "^12.0.7",
     "react": "^17.0.2",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.0.2",
-    "react-scripts": "^5.0.0",
     "styled-components": "^5.3.1",
     "svg-loaders-react": "^2.2.1",
     "typescript": "^4.4.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test - --watchAll=false",
-    "test:watch": "react-scripts test --watch",
-    "eject": "react-scripts eject",
+    "start": "next start",
+    "build": "next build",
+    "test": "next test - --watchAll=false",
+    "test:watch": "next test --watch",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public"
   },
