--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.24.0",
+    "babel-jest": "^27.4.6",
     "dayjs": "^1.10.7",
     "next": "^12.0.7",
     "react": "^17.0.2",
@@ -15,9 +16,10 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "lint": "prettier --write ./src/**/*.{ts,tsx,js} && eslint --fix",
     "start": "next start",
     "build": "next build",
-    "test": "next test - --watchAll=false",
+    "test": "jest --watchAll=false",
     "test:watch": "next test --watch",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public"
@@ -59,7 +61,7 @@
     "@storybook/node-logger": "^6.4.9",
     "@storybook/preset-create-react-app": "^4.0.0",
     "@storybook/react": "^6.4.9",
-    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/react": "^17.0.19",
