--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "styled-components": "^5.3.1",
     "svg-loaders-react": "^2.2.1",
     "typescript": "^4.4.2",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
