--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "axios": "^0.24.0",
     "babel-jest": "^27.4.6",
     "dayjs": "^1.10.7",
+    "express": "^4.17.2",
+    "http-proxy-middleware": "^2.0.1",
     "next": "^12.0.7",
     "react": "^17.0.2",
     "react-cookie": "^4.1.1",
@@ -20,7 +22,7 @@
     "lint": "prettier --write ./src/**/*.{ts,tsx,js} && eslint --fix",
     "start": "next start",
     "build": "next build",
-    "test": "jest --watchAll=false",
+    "test": "jest --watchAll=false ./src/**",
     "test:watch": "next test --watch",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public"
