--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.25.1",
     "eslint-plugin-storybook": "^0.5.6",
+    "jest": "^27.4.7",
     "prettier": "^2.5.1",
     "webpack": "^5.65.0"
   }
